--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,51 @@ body {
 .container__descricao{
     padding: 2em;
 }
+
+.dispositivos{
+    text-align: center;
+    margin-bottom: 2em;
+    font-size: 48px;
+}
+
+.dispositivos__ele{
+    margin-bottom: 2em;
+    display: inline-block;
+    width: 20%;
+    align-items: center;
+    text-align: center;
+    border: 10em;
+    padding: 0 1px;
+    font-weight: bold;
+}
+
+.container__dispositivos{
+    text-align: center;
+}
+
+.rodape__logo{
+    padding: 10em 48% 0 48%;
+}
+
+.rodape__lista{
+    display: flex;
+    color: var(--branco-principal);
+    list-style-type: none;
+    text-decoration: none;
+    padding: 1em;
+    justify-content: center;
+}
+
+.lista__link{
+    padding: 0 10px;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.rodape__texto{
+    padding: 1em 15em;
+    align-items: center;
+    text-align: center;
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
